--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.svg?color_snake=%230000FF&color_dots=%23ebedf0,%23c6e48b,%237bc96f,%23239a3b,%23196127
+            dist/github-contribution-grid-snake-dark.svg?color_snake=%230000FF&color_dots=%23161b22,%230e4429,%23006d32,%2326a641,%2339d353
 
       - name: Publicar no branch output
         uses: crazy-max/ghaction-github-pages@v4
